@@ -18,7 +18,7 @@
 
 <tr><td> <a href="frmt_various.html#AAIGrid">Arc/Info ASCII Grid</a>
 </td><td> AAIGrid
-</td><td> No
+</td><td> Yes
 </td><td> Yes
 </td></tr>
 
